gramatica.txt
string 	:= <">[]^{""}<">
number 	:= (0-9)+ (.(0-9)+)?
id 		:= (Aa-Zz)+(Aa-Zz|0-9)*(_(Aa-Zz|0-9)+)*
_       := (" "| \t)+

tokens = {SELECT, CREATE, INSERT, DELETE, INTO, FROM, WHERE, USING, BETWEEN, AND, FILE, TABLE, VALUES, LEFTPARENT, RIGHTPARENT, NUMBER, STRING, COMMA, EQUAL, INDEX, ID, EOF, _, EOL, NULL};

<stm_list>      := (<stm>)*
<stm>			:= select(busqueda), create table(init), insert(add), delete(remove)   
<value>			:= <string> | <number>
<value_list> 	:= <value><_>?(<,><_>?<value>)*
<attr_list>		:= <id>(<,><_>?<id>)*


<select-stm> 	:= <select><_><attr_list><_><from><_><id><_><where><_><id>(<equal-expr> | (<_> (<equal-expr> | <between-expr>)))
<create-stm> 	:= <create><_><table><_><id><_><from><_><string><_><using><_><index><_><id><(><string><)>
<insert-stm> 	:= <insert><_><into><_><id><_><values><(><value_list><)>
<delete-stm>    := <delete><_><from><_><id><_><where><_><id><_>?<equal-expr>
<equal-expr>    := <=><_>?<value> 
<between-expr>  := <between><_><value><_><and><_><value>
